# telegram-media-downloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  download_telegram_family_album.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_config.py  test_media.py  test_store.py
tg_media_dl/: __init__.py  auth.py  cli.py  config.py  downloader.py  media.py  store.py
